# Spiral-chip-removal-trough

./: .gitignore  CAD螺旋排屑槽绘制.docx  CAD螺旋排屑槽绘制.txt  CMakeLists.txt  README.md  plot_3d_helical_view.py  plot_sin_cos.py  regenerate_from_data.py  spiral_boundaries.csv  spiral_center.csv  spiral_groove_3d_cad.py  spiral_groove_3d_model.py  spiral_groove_designer.py  spiral_groove_interactive.py  spiral_groove_side_view.py  spiral_groove_side_view_lines_data.json  test_interactive.py  tool_outline.csv  使用说明.md  开发文档.md  线条颜色说明.md  逆向分析报告.md  项目结构说明.md  项目难度评估报告.md
SpiralGrooveTool/: AutoCADDrawer.cpp  AutoCADDrawer.h  MainWindow.cpp  MainWindow.h  SpiralCalculator.cpp  SpiralCalculator.h  SpiralGrooveTool.rc  main.cpp  resource.h
TVToolDesignC/TyPlot/: TyPlotConfig.csv
TVToolDesignC/Uninstall/: uninstall.xml
TVToolDesignC/X64/: BricsTyDrawingLib2023.brx  BricsTyDrawingLib2024.brx  GcadTyDrawingLib2019.grx  GcadTyDrawingLib2020.grx  GcadTyDrawingLib2021.grx  GcadTyDrawingLib2022.grx  GcadTyDrawingLib2023.grx  GcadTyDrawingLib2024.grx  GcadTyDrawingLib2025.grx  GcadTyDrawingLib2026.grx  OutProfile_A2010x64.arx  OutProfile_A2011x64.arx  OutProfile_A2012x64.arx  OutProfile_A2013x64.arx  OutProfile_A2014x64.arx  OutProfile_A2015x64.arx  OutProfile_A2016x64.arx  OutProfile_A2017x64.arx  OutProfile_A2018x64.arx  OutProfile_A2019x64.arx  OutProfile_A2020x64.arx  OutProfile_A2021x64.arx  OutProfile_A2022x64.arx  OutProfile_A2023x64.arx  OutProfile_A2024x64.arx  OutProfile_A2025x64.arx  OutProfile_A2026x64.arx  OutProfile_B2023x64.brx  OutProfile_B2024x64.brx  (+60 more)
(+496 files in other folders)
